<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidUtil</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="sample">Sample Text</string>
    <string name="phoneNumber">9028241812</string>
    <string name="address">5/2, Shivanand Hsg</string>
    <string name="imageDesc">Real View</string>
    <string name="menu_help">Help</string>
    <string name="menu_details">Details</string>
    <string name="menu_flat">Flat</string>
    <string name="menu_amenities">Amenities</string>
    <string name="menu_trends">Trends</string>
    <string name="menu_location">Location</string>
    <string name="menu_aerial">Aerial</string>

</resources>
